src/test/deca/context/invalid/invalid_essentiel/decl_method_2.deca
// Description:
//    Programme de test de declaration incorrect de méthode.
//

class A {
	void m(int i, float f){}
}

class B extends A {
	void m(int i, int j){}
}